Fixed video overlap.

--- a/css/stylish-portfolio.css
+++ b/css/stylish-portfolio.css
@@ -15,13 +15,17 @@ body {
 body {
     font-family: "Source Sans Pro","Helvetica Neue",Helvetica,Arial,sans-serif;
 }
+
+#top {
+    overflow:hidden; /* Fixes video overflow on JS non-mobile script video load */
+}
+
 #background {
  position: absolute;
     top: 50%;
     left: 50%;
     min-width: 100%;
     min-height: 100%;
-    width: 100;
     height: auto;
     z-index: -100;
     -ms-transform: translateX(-50%) translateY(-50%); /* IE 9 */
